# social-network

./: .gitignore  Dockerfile  nixpacks.toml  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  tailwind.config.js  tsconfig.json
cypress/fixtures/: empty.json
cypress/integration/: authenticated_user.spec.js  homepage.spec.js  login.spec.js  unauthenticated_user.spec.js
cypress/support/: commands.js
frontend/DTO/: index.ts
mail/migrations/: 0001_initial.py
mail/static/mail/: inbox.js  styles.css
mail/templates/mail/: inbox.html
network/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
network/api/: serializers.py  services.py  tests.py  urls.py  views.py
network/api/tests/: test_views.py
network/migrations/: 0001_initial.py  0002_auto_20210509_1222.py  0002_rename_creator_post_owner.py  0003_alter_post_created_at.py  0003_alter_post_options_alter_post_owner.py  0004_alter_user_following_set.py  0005_alter_post_options.py
network/src/sass/: main.scss
network/src/ts/: dto.ts  following.ts  index.ts  profile.ts  utils.ts
network/static/: script.js  styles.css
network/static/js/: like_post.js
network/static/network/css/: main.css  main.css.map
network/static/network/js/: following.js  index.js  profile.js  utils.js
network/templates/network/: following.html  index.html  layout.html  login.html  profile.html  register.html
network/tests/: test_models.py  test_permissions.py  test_serializers.py  test_views.py
project4/: settings.py  urls.py
src/: input.css
(+5 files in other folders)
